--- a/contest/templates/contest/register.html
+++ b/contest/templates/contest/register.html
@@ -17,10 +17,6 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
-{% extends "index/base.html" %} 
-{% load staticfiles %} 
-
-<!-- Contest detail info-->
 <div class="modal fade" id="register" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -34,7 +30,12 @@ SOFTWARE.
           </h2>
       </div>
       <div class="modal-body">
-        
+        <table width='100%'>
+          <tr>
+            <td style="background-color:black;width:50%;"><h2>222</h2></td>
+            <td style="background-color:orange;width:50%;"><h2>333</h2></td>
+          </tr>
+        </table>
       </div>
     </div>
   </div>
