ckeditor in bower

--- a/problem/templates/problem/edit.html
+++ b/problem/templates/problem/edit.html
@@ -92,7 +92,7 @@ SOFTWARE.
     </div>
   </div>
 </div>
-<script src="http://cdn.ckeditor.com/4.4.7/full/ckeditor.js"></script>
+<script src="{% static 'ckeditor/ckeditor.js' %}"></script>
 <script src="{% static 'problem/js/edit.js' %}"></script>
 </body>
 {% endblock %}
