--- a/status/templates/status/statusTable.html
+++ b/status/templates/status/statusTable.html
@@ -1,7 +1,5 @@
 {% load static %}
 {% load status_filters %}
-<link rel="stylesheet" href={% static "jquery-ui/themes/dark-hive/jquery-ui.css" %}>
-<script src={% static "jquery-ui/ui/jquery-ui.js" %}></script>
 
 <table class="table table-striped table-hover">
   <thead>
@@ -67,3 +65,14 @@
     {% endfor %}
   </tbody>
 </table>
+
+<script type="text/javascript">
+  $(function () {
+    $(document).tooltip({
+      track: true
+    });
+  })
+</script>
+
+<link rel="stylesheet" href={% static "jquery-ui/themes/dark-hive/jquery-ui.css" %}>
+<script src={% static "jquery-ui/ui/jquery-ui.js" %}></script>
