--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -21,12 +21,12 @@ SOFTWARE.
 
 {% block title_name %}
 <title>Contest</title>
-{% endblock title_name %} 
+{% endblock title_name %}
 
 {% block import_source %}
 <link href="{% static 'contest/css/contest.css' %}" rel="stylesheet">
 <script src="{%static 'contest/js/contest.js'%}"></script>
-{% endblock import_source %} 
+{% endblock import_source %}
 
 {% block body_block %}
 <body onload="getRestTime()">
@@ -50,7 +50,7 @@ SOFTWARE.
         </table>
       </div>
       <div class="progress" style="margin-left:5%;width:90%;">
-        <div id="timeline" class="progress-bar progress-bar-info" role="progressbar" 
+        <div id="timeline" class="progress-bar progress-bar-info" role="progressbar"
         aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width:20%">
           <span class="sr-only"></span>
         </div>
@@ -90,7 +90,7 @@ SOFTWARE.
         </table>
         {% if user|can_ask:contest %}
         <div align="center">
-          <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" 
+          <button type="button" class="btn btn-primary btn-lg" data-toggle="modal"
                   data-target="#clarification">Clarify</button>
         </div>
         {% endif %}
@@ -119,7 +119,7 @@ SOFTWARE.
         <div class="tab-pane" id="scoreboard">
           {% include "contest/scoreboard.html" %}
         </div>
-        <div class="tab-pane" id="status">4</div>
+        <div class="tab-pane" id="status">{{ status|safe }}</div>
       </div>
     </div>
     {% if user|can_ask:contest %}
