--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -73,7 +73,23 @@ SOFTWARE.
       {% for contest in contests %}
       <tr>
         <td>
+          <button type="button" class="btn btn-info btn-xs" data-toggle="modal" 
+                  data-target="#contestInfo{{ contest.id }}">
+            <span class="glyphicon glyphicon-info-sign"></span>
+          </button>
 
+          <script>
+          $('[data-toggle="tooltip"]').tooltip({
+            'placement': 'top'
+          });
+
+          </script>
+          {% if user.is_authenticated and contest.open_register %}
+          <button type="button" class="btn btn-success btn-xs"
+                  data-toggle="modal" data-target="#register{{ contest.id }}">
+            <span class="glyphicon glyphicon-plus"></span>
+          </button>
+          {% endif %}
           {% if user|has_auth:contest.id %}
           <a href="{% url 'contest:delete' contest.id %}">
             <button type="button" class="btn btn-danger btn-xs">
@@ -87,30 +103,12 @@ SOFTWARE.
           </a>
 
           {% else %}
+          <!--
           <button type="button" class="btn btn-default btn-xs" data-toggle="tooltip" 
                   data-placement="top" title="Start Virtual Contest">
             <span class="glyphicon glyphicon-play"></span>
           </button>
-          
-          {% endif %}
-          <button type="button" class="btn btn-info btn-xs" data-toggle="modal" 
-                  data-target="#contestInfo{{ contest.id }}">
-            <span class="glyphicon glyphicon-info-sign"></span>
-          </button>
-
-          <script>
-          $('[data-toggle="tooltip"]').tooltip({
-            'placement': 'top'
-          });
-
-          </script>
-          {% if not user|has_auth:contest.id %}
-          {% if user.is_authenticated and contest.open_register %}
-          <button type="button" class="btn btn-success btn-xs"
-                  data-toggle="modal" data-target="#register">
-            <span class="glyphicon glyphicon-plus"></span>
-          </button>
-          {% endif %}
+          -->
           {% endif %}
         </td>
         <td>{{ contest.id }}</td>
@@ -145,7 +143,7 @@ SOFTWARE.
           <span aria-hidden="true">&times;</span>
           <span class="sr-only">Close</span>
         </button>
-        <h2 class="modal-title" id="myModalLabel">
+        <h2 class="modal-title">
             {{ contest.cname }}
           </h2>
       </div>
@@ -176,7 +174,7 @@ SOFTWARE.
                 </tr>
               </thead>
               <tbody>
-                {% for problem in contest.problems %}
+                {% for problem in contest.problem.all %}
                 <tr>
                   {% if user|has_auth:contest.id %}
                   <td>
