--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -82,9 +82,9 @@ SOFTWARE.
             <tr>
               {% if user|can_reply:contest %}
               <td>
-              <button type="button" class="btn btn-warning btn-xs" 
+              <button name="reply" type="button" class="btn btn-warning btn-xs" 
                       data-toggle="modal" data-target="#reply" 
-                      onclick="select({{ clarification.id }})">Reply</button>
+                      onclick="select({{ clarification.id }},'{{ clarification.content }}')">Reply</button>
               </td>
               {% endif %}
               <td>{{ forloop.counter }}</td>
