--- a/contest/templates/contest/reply.html
+++ b/contest/templates/contest/reply.html
@@ -30,10 +30,10 @@ SOFTWARE.
       </div>
       <div class="modal-body">
         <form action="{% url 'contest:reply' %}" method="POST" role="form">
-          {% csrf_token %} {{ reply_form.replyer.as_hidden }}
+          {% csrf_token %} {{ reply_form.replyer.as_hidden }} {{ reply_form.clarification.as_hidden }}
           <div class="form-group" style="width:50%">
             <label>Clarification</label>
-            {{ reply_form.clarification }}
+            <div id="description"></div>
           </div>
           <div class="form-group">
             <label>Reply</label>
