--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -35,63 +35,56 @@ SOFTWARE.
 {% block body_block %}
   <!-- clock -->
   <input type="text" id="alert_info" value="{{alert_info}}" />
-  <div class="gray">
+  <!--
+  <div class="alert label-default gray">
+  </div>
+  -->
+  <!-- logo -->
+  <div id="logo" class="center">
+  <div class="jumbotron" id="logo-content">
+    <h1>NTHUOJ</h1>
+    <hr>
+      <p>
+      This is National Tsing Hua University Online Judge, an ACM-like
+      online judge designed for training purposes and a platform of
+      contest. You may utilize this site by the links on the side bar and
+      top-right corner. Each of them will redirect you to a page with
+      the following functions.
+    </p>
+  </div>
   </div>
 
-  <hr class="hr1">
-
-  <!-- logo -->
-  <table class="tlogo">
-    <tr align="center">
-      <td >
-        <div class="logo" >
-         <h1><p class="p1">NTHUOJ<p></h1>
-         <hr class="hr2">
-          <p style="text-align: left">
-            This is National Tsing Hua University Online Judge, an ACM-like
-            online judge designed for training purposes and a platform of
-            contest. You may utilize this site by the links on the side bar and
-            top-right corner. Each of them will redirect you to a page with
-            the following functions.
-          </p>
-        </div>
-      </td>
-     </tr>
-  </table>
-
   <!-- contest -->
-  <table align="center" class="table table-striped table-hover  table1">
-    <thead class="line" style="background-color: #E5E5E5">
-      <tr style="background-color: #fff">
-        <td colspan="3"><p class="p5"><b>Running Contest</b></p></td>
-      </tr>
-    </thead>
-    <thead style="background-color: #E5E5E5">
-      <tr>
-        <th>Contest name</th>
-        <th>remaining time</th>
-        <th>upcoming</th>
-      </tr>
-    </thead>
-    <tbody class="line" id="contest_content">
-      {% for c_running in c_runnings %}
-        <tr id="contest_{{ c_running.id }}">
-          <td>{{ c_running.cname }}</td>
-          <td name="remain"></td>
-          <td></td>
-          <td name="end" class="end">{{ c_running.end_time|date:"Y/m/d H:i:s" }}</td>
-          <td name="contest_id" class="end">{{ c_running.id }}</td>
-          <td name="freeze_time" class="end">{{ c_running.freeze_time }}</td>
-        </tr>
-      {% endfor %}
-      {% for c_upcoming in c_upcomings %}
+  <div id="contest" class="center">
+    <h3>Running Contest</h3>
+    <table align="center" class="table table-striped table-hover">
+      <thead class="line">
         <tr>
-          <td>{{ c_upcoming.cname }}</td>
-          <td></td>
-          <td  name="upcome"></td>
-          <td  name="start" class="start">{{ c_upcoming.start_time|date:"Y/m/d H:i:s" }}</td>
+          <th>Contest name</th>
+          <th>remaining time</th>
+          <th>upcoming</th>
         </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+      </thead>
+      <tbody id="contest_content">
+        {% for c_running in c_runnings %}
+          <tr id="contest_{{ c_running.id }}">
+            <td>{{ c_running.cname }}</td>
+            <td name="remain"></td>
+            <td></td>
+            <td name="end" class="end">{{ c_running.end_time|date:"Y/m/d H:i:s" }}</td>
+            <td name="contest_id" class="end">{{ c_running.id }}</td>
+            <td name="freeze_time" class="end">{{ c_running.freeze_time }}</td>
+          </tr>
+        {% endfor %}
+        {% for c_upcoming in c_upcomings %}
+          <tr>
+            <td>{{ c_upcoming.cname }}</td>
+            <td></td>
+            <td  name="upcome"></td>
+            <td  name="start" class="start">{{ c_upcoming.start_time|date:"Y/m/d H:i:s" }}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
 {% endblock body_block %}
