--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -58,7 +58,7 @@ SOFTWARE.
             </textarea>
             <div class="poptxt_sm">
               <br>
-              <a href="" class="btn btn-default btn1">
+              <a href="" class="btn btn-primary">
                 Submit
               </a>
             </div>
@@ -87,7 +87,7 @@ SOFTWARE.
 
             <div class="poptxt_sm">
               <br>
-              <a href="" class="btn btn-default btn1">Submit</a>
+              <a href="" class="btn btn-primary">Submit</a>
             </div>
           </div>
         </form>
