fix contest info. mins to minutes

--- a/contest/templates/contest/contestInfo.html
+++ b/contest/templates/contest/contestInfo.html
@@ -140,7 +140,7 @@ SOFTWARE.
           </div>
           <div class="tab-pane" id="contest_others{{ contest.id }}">
             <label>Freeze Time：</label>
-            <h4>{{ contest.freeze_time }} mins</h4>
+            <h4>{{ contest.freeze_time }} minutes</h4>
             {% if contest.is_homework %}
               <span class="glyphicon glyphicon-ok green" aria-hidden="true"></span>Is Homework
             {% else %}
