--- a/index/templates/index/404.html
+++ b/index/templates/index/404.html
@@ -31,9 +31,9 @@ SOFTWARE.
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js">
   </script>
   <!-- bootstrap, bootwatch JS & CSS -->
-  <link rel="stylesheet" 
+  <link rel="stylesheet"
         href="http://bootswatch.com/paper/bootstrap.css" media="screen">
-  <link rel="stylesheet" 
+  <link rel="stylesheet"
         href="http://bootswatch.com/assets/css/bootswatch.min.css">
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js">
   </script>
@@ -41,11 +41,10 @@ SOFTWARE.
 </head>
 <body>
   <div style="position:relative;bottom:0px;">
-    <p style="text-align:center" class="err1" >4&nbsp0&nbsp4</p>
+    <p style="text-align:center" class="status" >4&nbsp0&nbsp4</p>
   </div>
-  <p style="text-align:center" class="err2">Page Not Found</p>
-  <p style="text-align:center" class="err2">{{ error_message }}</p>
-  <p style="text-align:center" class="err3">
+  <p style="text-align:center" class="status-title">Page Not Found</p>
+  <p style="text-align:center" class="status-condition">
     Sorry , the page you are looking for seems to be missing.
   </p>
 </body>
