--- a/index/templates/index/400.html
+++ b/index/templates/index/400.html
@@ -42,12 +42,12 @@ SOFTWARE.
 <body>
   <div style="background-color:#fcfcfc;border-radius:10px;">
     <div style="position:relative;bottom:0px;">
-      <p style="text-align:center" class="status" >5&nbsp0&nbsp0</p>
+      <p style="text-align:center" class="status" >4&nbsp0&nbsp0</p>
     </div>
-    <p style="text-align:center" class="status-title">Some errors occurred</p>
+    <p style="text-align:center" class="status-title">Bad Request</p>
     <p style="text-align:center" class="status-title">{{ error_message }}</p>
     <p style="text-align:center" class="status-condition">
-      Oops , there was an error.
+      Your browser (or proxy) sent a request that this server could not understand.
     </p>
   </div>
 </body>
